--- a/hospital/templates/medicine_display.html
+++ b/hospital/templates/medicine_display.html
@@ -22,6 +22,30 @@
     {% else %}
         <title>Hospital</title>
     {% endif %}
+    <style>
+      .article-title {
+        font-family: Georgia, "Times New Roman", Times, serif;
+        font-size:24px;
+ margin-top: 5px; margin-bottom: 8px;
+        font-weight: normal;
+        color: #222;
+        
+      }
+      .article-metadata{
+        font-family: times, Times New Roman, times-roman, georgia, serif;
+        font-size: 25px;
+        line-height: 40px;
+        letter-spacing: -1px;
+        color: #444;
+      }
+      .article-content{
+        font-family: times, Times New Roman, times-roman, georgia, serif;
+        font-size: 18px;
+        line-height: 20px;
+        color: #444;
+      }
+    </style>
+
     {{ flask_util_js.js }}
 </head>
 <body>
@@ -69,30 +93,51 @@
                 <div class="article-metadata">
                     <h3 class="mr-2" >Medicine name: {{ med.name }}</h3>
                 </div>
-                <h4 class="article-title mr-2">Manufactured_by: </h4><p>{{ med.manufactured_by }}</p>
+                <div class="article-title mr-2">
+                <h4 style="display: inline;">Manufactured By: </h4>
+                    <p class="article-content mr-2" style="display: inline; font-size: 20px; margin-left: 10px;">{{ med.manufactured_by }}</p>
+                </div>
                 {% if med.price %}
-                <h4 class="article-title mr-2">Price: </h4><p>{{ med.price }}</p>
+                <div class="article-title mr-2"> 
+                <h4 style="display: inline;">Price: </h4><p style="display: inline; font-size: 16px; margin-left: 10px;">{{ med.price }}</p>
+                </div>
                 {% else %}
-                <h4 class="article-title mr-2">Price: </h4><p>Cost of med varies </p>
+                <p class="article-title mr-2">Price: </p><p>Cost of med varies</p>
                 {% endif %}
-                <h4 class="article-title mr-2">Description: </h4></br>
+                <div >
+                <h5 class="article-title mr-2">Description: </h5>
                 <p class="article-content mr-2">{{ med.description }}</p>
-                <h4 class="article-title mr-2">Uses: </h4></br>
+                <h5 class="article-title mr-2">Uses: </h5>
                 <p class="article-content mr-2">{{ med.uses }}</p>
-                <h4 class="article-title">Side effects: </h4></br>
+                <h5 class="article-title">Side effects: </h5>
                 {% if med.side_effects %}
                 <p class="article-content">{{ med.side_effects }}</p>
                 {% else %}
                 <p class="article-content">No Side effects</p>
                 {% endif %}
+                <div class="article-title">
                 {% if sub %}
-                <h4 class="article-title mr-2">Substitute medicine: </h4><a class="" href="{{ url_for('medicine_display', medicine_id=sub.id) }}">{{ sub.name }}</p>
+                <h4 style="display: inline;">Substitute medicine: </h4><a style="display: inline;margin-left: 10px ;font-size: 20px; font-family:times, Times New Roman, times-roman, georgia, serif;" href="{{ url_for('medicine_display', medicine_id=sub.id) }}">{{ sub.name }}</a>
                 {% else %}
                 <h5 class="article-title mr-2">We are sorry to say that this medicine does not have any substitute. Please contact your doctor for further information</h5>
                 {% endif %}
+              </div>
                 </div>
             </article>
            </div>
+           <div class="col-md-4">
+            <div class="content-section">
+                <h3>Our Sidebar</h3>
+                <p class='text-muted'>Check these out!
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-light"><a href="{{ url_for('necessary_information') }}">Necessary information</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{{ url_for('view_announcement') }}">View announcements</a></li>
+                    <li class="list-group-item list-group-item-light">Calendars</li>
+                    <li class="list-group-item list-group-item-light">etc</li>
+                </ul>
+                </p>
+            </div>
+            </div>
         </div>
     </main>
     <button class="open-button" onclick="openForm()" style="right: 70px;">
