--- a/hospital/templates/view_cart.html
+++ b/hospital/templates/view_cart.html
@@ -72,8 +72,8 @@
           <!-- Product #1 -->
           <div class="item" style="max-width: fit-content;border-style: ridge;">
             <div class="buttons" style=" max-width: 20px;">
-              <span class="delete-btn" style="background: url( {{ url_for('static', filename='images/delete-icn.svg') }}) no-repeat center;" data-toggle="modal" data-target="#deleteModal"></span>
-              <span class="like-btn" style="background: url( {{ url_for('static', filename='images/twitter-heart.png') }}); position: absolute;top: 9px;left: 15px;display: inline-block;width: 60px;height: 60px;background-size: 2900%;background-repeat: no-repeat;cursor: pointer;"></span>
+              <span class="delete-btn" style="background: url( {{ url_for('static', filename='images/delete-icn.svg') }} ); no-repeat center;" data-toggle="modal" data-target="#deleteModal"></span>
+              <span class="like-btn" style="background: url( {{ url_for('static', filename='images/twitter-heart.png') }} ); position: absolute;top: 9px;left: 15px;display: inline-block;width: 60px;height: 60px;background-size: 2900%;background-repeat: no-repeat;cursor: pointer;"></span>
             </div>
     
             <div class="image">
