Doctors added in database

--- a/hospital/templates/404.html
+++ b/hospital/templates/404.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h2>Sorry, the page you are looking for does not exist!</h2>
     <br/>
-    <h4>Go to <a href="{{ url_for('login') }}">login page</a> to start chating.</h3>
+    <h4>Go to <a href="{{ url_for('login') }}">login page</a> to start exploring Life Care.</h4>
     <br/>
     <hr>
 
